chore: finalize full-stack cloud orchestration (production-grade configurations)